--- a/app/assets/stylesheets/venues.scss
+++ b/app/assets/stylesheets/venues.scss
@@ -2,8 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#gmap1 {
+#map {
     width: 600px;
     height: 400px;
 }
 
+#map2 {
+    width: 600px;
+    height: 400px;
+}
